[project]
name = "QuestCompleter"
version = "0.1.0"
description = "A simple discord quest completer written in python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "pydotmap>=0.1.3",
    "rich>=14.2.0",
]

[tool.ruff]
indent-width = 4

[tool.ruff.lint]
# Multiple import in one line, use def instead of lambda
ignore = [ "E401", "E731", "E501" ]
# Allow unused variabled when underscore prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
